--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
         
         <!--Right box for buttons-->
         <div class="right">
-            <button class="btn">tyo</button>
+            <button class="btn">Feedback</button>
+            <li><a href="Feedback.html"></a></li>
             <class class="btn">Email Us</class>
         </div>
     </header>
