--- a/FitnessCal.html
+++ b/FitnessCal.html
@@ -23,5 +23,10 @@
           healthy body weight, it is a useful indicator of whether any additional 
           testing or action is required. Refer to the table below to see the different
            categories based on BMI that are used by the calculator.</p>
+           <li><a href="BMI_Calculator.html">BMI Calculator</a></li>
+
+                
+                <li><a href="Calorie_Calculator.html">Calorie Calculator</a></li>
+                
 </body>
 </html>
